Apply offset fixes to Spectral classes